[project]
name = "des-reliability"
version = "0.1.0"
description = "Reliability components for discrete event simulations"
readme = "README.md"
authors = [
    { name = "Fedor Baart", email = "fedor.baart@rws.nl" }
]
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.23.0",
    "jax>=0.8.2",
    "jaxlib>=0.8.2",
    "numpy>=2.4.1",
    "numpyro>=0.19.0",
    "pandas>=2.3.3",
    "pymc>=5.26.1",
    "simpy>=4.1.1",
]

[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
